---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "const N := 255\nvar c256 : char(256)\n\nvar _e00 : string(N) := c256 % [not captured by ctc]\n"
---
"N"@(FileId(1), 6..7) [ConstVar(Const, No)]: int
"c256"@(FileId(1), 19..23) [ConstVar(Var, No)]: char_n Fixed(Unevaluated(LibraryId(0), BodyId(1)))
"_e00"@(FileId(1), 41..45) [ConstVar(Var, No)]: string_n Fixed(Unevaluated(LibraryId(0), BodyId(2)))
"<root>"@(dummy) [Module(No)]: <error>

error in file FileId(1) at 61..65: mismatched types
| note in file FileId(1) for 61..65: this is of type `char(256)`
| note in file FileId(1) for 48..57: this is of type `string(255)`
| info: `char(256)` is not assignable into `string(255)`
